made some changes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,67 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et,
-      perspiciatis.
-    </h2>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
-      laudantium porro magnam repudiandae odit. Ducimus maxime, ipsam, eum
-      reprehenderit sit beatae dolor sequi, nam animi modi enim doloribus?
-      Doloremque, harum.
-    </p>
+    <h1 class="heading">Welcome to the brand new Blog</h1>
+    <div class="mama">
+      <h2>Blog-1</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+        laudantium porro magnam repudiandae odit. Ducimus maxime, ipsam, eum
+        reprehenderit sit beatae dolor sequi, nam animi modi enim doloribus?
+        Doloremque, harum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Quia, tempora!
+      </p>
+    </div>
+    <div class="mama">
+      <h2>Blog-2</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+        laudantium porro magnam repudiandae odit. Ducimus maxime, ipsam, eum
+        reprehenderit sit beatae dolor sequi, nam animi modi enim doloribus?
+        Doloremque, harum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Quia, tempora!
+      </p>
+    </div>
+    <div class="mama">
+      <h2>Blog-3</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+        laudantium porro magnam repudiandae odit. Ducimus maxime, ipsam, eum
+        reprehenderit sit beatae dolor sequi, nam animi modi enim doloribus?
+        Doloremque, harum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Quia, tempora!
+      </p>
+    </div>
+    <div class="mama">
+      <h2>Blog-4</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+        laudantium porro magnam repudiandae odit. Ducimus maxime, ipsam, eum
+        reprehenderit sit beatae dolor sequi, nam animi modi enim doloribus?
+        Doloremque, harum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Quia, tempora!
+      </p>
+    </div>
+    <div class="mama">
+      <h2>Blog-5</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+        laudantium porro magnam repudiandae odit. Ducimus maxime, ipsam, eum
+        reprehenderit sit beatae dolor sequi, nam animi modi enim doloribus?
+        Doloremque, harum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Quia, tempora!
+      </p>
+    </div>
+    <div class="mama">
+      <h2>Blog-6</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+        laudantium porro magnam repudiandae odit. Ducimus maxime, ipsam, eum
+        reprehenderit sit beatae dolor sequi, nam animi modi enim doloribus?
+        Doloremque, harum. Lorem ipsum dolor sit, amet consectetur adipisicing
+        elit. Quia, tempora!
+      </p>
+    </div>
   </body>
+  <footer>this is the footer section @minhajhasan</footer>
 </html>
